kubernetes/clusters/homelab/apps/media/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-prod-cp-1
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lidarr
          image: ghcr.io/home-operations/lidarr:3.1.6.5078@sha256:b4c60ae24ff264bcdfd8d5562982d99105c17b82c28a6986498f6fb215b7f42e
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - NET_RAW
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: lidarr-pvc
              mountPath: /config
            - name: media-nfs
              mountPath: /mnt/media
              readOnly: false
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: lidarr-pvc
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: media-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: tmp-volume
          emptyDir: {}
